Moved SneakyUUID to a different file and other stuff